<resources>
    <string name="app_name">MaterialVideo</string>

    <string name="navigation_drawer_open">打开菜单</string>
    <string name="navigation_drawer_close">关闭菜单</string>

    <string name="action_settings">Settings</string>


    <string name="nav_community">星场</string>
    <string name="nav_video">我的作品</string>
    <string name="nav_workcollet">钱包</string>
    <string name="nav_reward">我的积分</string>
    <string name="nav_vip">我的特权</string>
    <string name="nav_bbs">星星之家</string>
    <string name="nav_set">设置</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="transition_book_img">transition_book_img</string>

    <string name="film_type_video_album">视频相册</string>
    <string name="film_type_wechat_moments">朋友圈专用</string>
    <string name="film_type_opening">开场片头</string>
    <string name="film_type_film">影片</string>
    <string name="film_type_ads">广告片</string>
    <string name="film_type_media">节目制作</string>
    <string name="film_type_custom_clip">自由剪辑</string>
    <string name="film_type_my_mark">模板收藏</string>
    <string name="film_type_mark">我的收藏</string>
    <string name="film_type_custom_template">模板定制</string>
    <string name="film_type_comment_video_album">给照片更多精彩</string>
    <string name="film_type_comment_film">用电影讲述生活</string>
    <string name="film_type_comment_opening">震撼片头触手可及</string>
    <string name="film_type_comment_ads">动动手指轻松做广告</string>
    <string name="film_type_comment_media">人人都是媒体人</string>
    <string name="film_type_comment_custom_template">专属你的私人订制</string>
    <string name="start_to_make">开始创作</string>
    <string name="close">关闭</string>

    <!--ijkplayer-->
    <string name="N_A">N/A</string>
    <string name="exit">Exit</string>
    <string name="sample">Sample</string>
    <string name="recent">Recent</string>
    <string name="settings">Settings</string>
    <string name="tracks">Tracks</string>
    <string name="toggle_player">Player</string>
    <string name="toggle_render">Render</string>
    <string name="toggle_ratio">Scale</string>
    <string name="show_info">Info</string>
    <string name="vdec">vdec</string>
    <string name="fps">fps</string>
    <string name="v_cache">v-cache</string>
    <string name="a_cache">a-cache</string>

    <string name="media_information">Media Information</string>
    <string name="mi_player">Player</string>
    <string name="mi_media">Media</string>
    <string name="mi_profile_level">Profile level</string>
    <string name="mi_pixel_format">Pixel format</string>
    <string name="mi_resolution">Resolution</string>
    <string name="mi_length">Length</string>
    <string name="mi_stream_fmt1">Stream #%d</string>
    <string name="mi_type">Type</string>
    <string name="mi_language">Language</string>
    <string name="mi_codec">Codec</string>
    <string name="mi_frame_rate">Frame rate</string>
    <string name="mi_bit_rate">Bit rate</string>
    <string name="mi_sample_rate">Sample rate</string>
    <string name="mi_channels">Channels</string>
    <string name="mi__selected_video_track">*</string>
    <string name="mi__selected_audio_track">*</string>

    <string name="TrackType_video">Video</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_unknown">Unknown</string>

    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_error_button">OK</string>

    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>

    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>

    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>
    <string name="title_activity_login">登录界面</string>

    <!-- Strings related to login -->
    <string name="prompt_email">账号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
